--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,5 +38,5 @@ jobs:
         uses: JamesIves/github-pages-deploy-action@v4
         with:
           branch: gh-pages  # Deploy to the `gh-pages` branch
-          folder: dist/paste-perfect 
+          folder: dist/paste-perfect/browser
           clean: true
