--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,15 +1,16 @@
-name: Deploy Angular App to GitHub Pages
+name: Build and Deploy Angular App
 
 on:
   push:
     branches:
-      - main  # Main branch only
+      - main  # Trigger on main branch
 
 permissions:
   contents: write
 
 jobs:
-  build-and-deploy:
+  build:
+    name: Build Angular App
     runs-on: ubuntu-latest
 
     steps:
@@ -19,7 +20,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 'lts/*' # Use the latest LTS version
+          node-version: 'lts/*'  # Use latest LTS version
 
       - name: Install dependencies
         run: npm ci  # Uses package-lock.json for reproducible installs
@@ -33,10 +34,21 @@ jobs:
       - name: Build Angular app
         run: npm run build
 
+    outputs:
+      build_success: ${{ job.status }}  # Expose the build status as an output
+
+  deploy:
+    name: Deploy to GitHub Pages
+    runs-on: ubuntu-latest
+    needs: build  # Runs only after a successful build
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
       - name: Deploy to GitHub Pages
-        if: success()  # Runs only if previous steps succeed
         uses: JamesIves/github-pages-deploy-action@v4
         with:
-          branch: gh-pages  # Deploy to the `gh-pages` branch
+          branch: gh-pages  # Deploy to `gh-pages` branch
           folder: dist/paste-perfect/browser
           clean: true
