--- a/.github/workflows/dependabot-automerge.yml
+++ b/.github/workflows/dependabot-automerge.yml
@@ -1,13 +1,19 @@
 name: Dependabot Auto-Merge
 
 on:
-  pull_request:
+  workflow_run:
+    workflows: ["Build App"] 
+    types:
+      - completed
     branches:
-      - main
+      - main  # Only run on main branch
 
 jobs:
   auto-merge:
+    name: Auto Merge Pull Request
     runs-on: ubuntu-latest
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}  # Run only if Build App succeeds
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
