--- a/.github/workflows/dependabot-automerge.yml
+++ b/.github/workflows/dependabot-automerge.yml
@@ -1,18 +1,14 @@
 name: Dependabot Auto-Merge
 
 on:
-  workflow_run:
-    workflows: ["Build App"] 
-    types:
-      - completed
+  pull_request:
     branches:
-      - main  # Only run on main branch
+      - main
 
 jobs:
   auto-merge:
     name: Auto Merge Pull Request
     runs-on: ubuntu-latest
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}  # Run only if Build App succeeds
 
     steps:
       - name: Checkout repository
