--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -37,6 +37,7 @@ jobs:
           # list of Docker images to use as base name for tags
           images: |
             ghcr.io/AnotherStranger/paste-perfect
+            horaceworblehat/paste-perfect
           # generate Docker tags based on the following events/attributes
           tags: |
             type=schedule,value=latest
