--- a/.releaserc.json
+++ b/.releaserc.json
@@ -41,6 +41,12 @@
       }
     ],
     [
+      "@semantic-release/npm",
+      {
+        "npmPublish": false
+      }
+    ],
+    [
       "@semantic-release/github"
     ],
     [
