fix: map job token to GH_TOKEN

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,4 +32,6 @@ jobs:
         with:
           node-version: "lts/*"
       - name: Release
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: npx --package @semantic-release/git semantic-release
