--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -1,5 +1,6 @@
 services:
   paste-perfect:
+    image: horaceworblehat/paste-perfect:latest
     build:
       context: ../
       dockerfile: docker/Dockerfile
