--- a/.releaserc.json
+++ b/.releaserc.json
@@ -12,6 +12,37 @@
       "@semantic-release/commit-analyzer",
       {
         "preset": "angular",
+        "releaseRules": [
+          {
+            "type": "docs",
+            "scope": "README",
+            "release": "patch"
+          },
+          {
+            "type": "perf",
+            "release": "patch"
+          },
+          {
+            "type": "test",
+            "release": "patch"
+          },
+          {
+            "type": "build",
+            "release": "patch"
+          },
+          {
+            "type": "refactor",
+            "release": "patch"
+          },
+          {
+            "type": "style",
+            "release": "patch"
+          },
+          {
+            "type": "ci",
+            "release": "minor"
+          }
+        ],
         "parserOpts": {
           "noteKeywords": [
             "BREAKING CHANGE",
@@ -24,7 +55,94 @@
     [
       "@semantic-release/release-notes-generator",
       {
-        "preset": "angular",
+        "preset": "conventionalcommits",
+        "presetConfig": {
+          "types": [
+            {
+              "type": "build",
+              "section": "Build System",
+              "hidden": false
+            },
+            {
+              "type": "chore",
+              "section": "Build System",
+              "hidden": false
+            },
+            {
+              "type": "ci",
+              "section": "Continuous Integration",
+              "hidden": false
+            },
+            {
+              "type": "docs",
+              "section": "Documentation",
+              "hidden": false
+            },
+            {
+              "type": "feat",
+              "section": "Features",
+              "hidden": false
+            },
+            {
+              "type": "fix",
+              "section": "Bug Fixes",
+              "hidden": false
+            },
+            {
+              "type": "perf",
+              "section": "Performance Improvements",
+              "hidden": false
+            },
+            {
+              "type": "refactor",
+              "section": "Code Refactoring",
+              "hidden": false
+            },
+            {
+              "type": "style",
+              "section": "Styles",
+              "hidden": false
+            },
+            {
+              "type": "test",
+              "section": "Tests",
+              "hidden": false
+            }
+          ]
+        },
+        "releaseRules": [
+          {
+            "type": "docs",
+            "scope": "README",
+            "release": "patch"
+          },
+          {
+            "type": "refactor",
+            "release": "patch",
+            "section": "Other Changes",
+            "hidden": false
+          },
+          {
+            "type": "style",
+            "release": "patch"
+          },
+          {
+            "type": "ci",
+            "release": "minor"
+          },
+          {
+            "type": "perf",
+            "release": "patch"
+          },
+          {
+            "type": "test",
+            "release": "patch"
+          },
+          {
+            "type": "build",
+            "release": "patch"
+          }
+        ],
         "parserOpts": {
           "noteKeywords": [
             "BREAKING CHANGE",
@@ -43,16 +161,14 @@
     [
       "@semantic-release/npm",
       {
-        "npmPublish": false
+        "npmPublish": false,
+        "tarballDir": "dist"
       }
     ],
     [
-      "@semantic-release/github"
-    ],
-    [
-      "@semantic-release/git",
+      "@semantic-release/github",
       {
-        "message": "chore(release): ${nextRelease.version}\n\n${nextRelease.notes}"
+        "assets": "dist/*.tgz"
       }
     ]
   ]
