fix: move permissions

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,4 +31,4 @@ jobs:
       - name: Release
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: npx --package @semantic-release/git --package @semantic-release/release-notes-generator --package conventional-changelog-conventionalcommits semantic-release
+        run: npx --package @semantic-release/github  --package @semantic-release/release-notes-generator --package conventional-changelog-conventionalcommits semantic-release
