--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@semantic-release/release-notes-generator": "^14.0.3",
     "@types/node": "^22.13.10",
     "angular-eslint": "19.2.1",
+    "conventional-changelog-conventionalcommits": "^8.0.0",
     "eslint": "^9.22.0",
     "prettier": "^3.5.3",
     "semantic-release": "^24.2.3",
