--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -43,7 +43,7 @@ jobs:
         with:
           # list of Docker images to use as base name for tags
           images: |
-            ${{ IMAGE_NAME }}
+            ${{ env.IMAGE_NAME }}
           # generate Docker tags based on the following events/attributes
           tags: |
             type=schedule,value=latest
@@ -91,7 +91,7 @@ jobs:
         uses: aquasecurity/trivy-action@master
         if: ${{ github.event_name != 'pull_request' }}
         with:
-          image-ref: "${{ IMAGE_NAME }}:sha-${{ github.sha }}"
+          image-ref: "${{ env.IMAGE_NAME }}:sha-${{ github.sha }}"
           format: 'sarif'
           output: "trivy-results-docker.sarif"
           severity: "CRITICAL,HIGH,MEDIUM"
