--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "ng build",
     "build-docker": "ng build --base-href /",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
+    "test": "npx playwright test",
     "lint": "ng lint",
     "lint:fix": "ng lint --fix",
     "format": "prettier --write 'src/**/*.{ts,js,json,html,scss}'",
@@ -38,6 +38,7 @@
     "@angular-devkit/build-angular": "19.2.4",
     "@angular/cli": "19.2.4",
     "@angular/compiler-cli": "19.2.3",
+    "@playwright/test": "^1.51.1",
     "@semantic-release/commit-analyzer": "13.0.1",
     "@semantic-release/github": "11.0.1",
     "@semantic-release/npm": "12.0.1",
