refactor(renovate): remove stability days as we only automerge into dev branch

--- a/renovate.json
+++ b/renovate.json
@@ -24,6 +24,5 @@
   "ignorePaths": [
     "docker-compose.yml"
   ],
-  "ignoreUnstable": true,
-  "minimumReleaseAge": "7 days"
+  "ignoreUnstable": true
 }
