--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -56,3 +56,10 @@ jobs:
 
       - name: Run tests
         run: npm run test
+
+      - name: Upload test result artifacts
+        if: always()  # Ensures it runs even if tests fail
+        uses: actions/upload-artifact@v4
+        with:
+          name: playwright-report
+          path: playwright-report/
