fix(ci): update run rules to prevent double runs

--- a/.github/workflows/e2etest.yml
+++ b/.github/workflows/e2etest.yml
@@ -1,8 +1,12 @@
 name: Run End to End Tests
 
 on:
-  pull_request:
   push:
+    branches:
+      - main
+      - dev
+  pull_request:
+
 permissions:
   contents: read
   actions: read
