--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,8 +1,12 @@
 name: Run Unit Tests
 
 on:
-  pull_request:
   push:
+    branches:
+      - main
+      - dev
+  pull_request:
+
 permissions:
   contents: read
   actions: read
