--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -40,6 +40,6 @@ jobs:
         if: success() || failure()    # run this step even if previous step failed
         with:
           name: JEST Tests            # Name of the check run which will be created
-          path: juint.xml    # Path to test results
+          path: ./juint.xml    # Path to test results
           reporter: jest-junit        # Format of test results
           badge-title: 'unittests'
