fix(ci): jest unit test

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,13 +33,14 @@ jobs:
         run: npx playwright install --with-deps
 
       - name: Run Unit Tests
-        run: npm run test:unit:ci
+        run: npm run test:unit:ci || true
 
       - name: Test Report
         uses: dorny/test-reporter@v2
-        if: success() || failure()    # run this step even if previous step failed
+        if: always()
         with:
           name: JEST Tests            # Name of the check run which will be created
-          path: ./juint.xml    # Path to test results
+          path: "**/juint.xml"    # Path to test results
           reporter: jest-junit        # Format of test results
           badge-title: 'unittests'
+          fail-on-error: true
