--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,21 +26,13 @@ jobs:
         with:
           node-version: 'lts/*'  # Use latest LTS version
 
-      - name: Install dependencies
-        run: npm ci  # Uses package-lock.json for reproducible installs
-
-      - name: Install playwright browsers
-        run: npx playwright install --with-deps
-
-      - name: Run Unit Tests
-        run: npm run test:unit:ci || true
+      - run: npm ci  # Uses package-lock.json for reproducible installs
+      - run: npm run test:unit:ci
 
       - name: Test Report
         uses: dorny/test-reporter@v2
         if: always()
         with:
           name: JEST Tests            # Name of the check run which will be created
-          path: "**/juint.xml"    # Path to test results
+          path: "reports/jest-*.xml"
           reporter: jest-junit        # Format of test results
-          badge-title: 'unittests'
-          fail-on-error: true
