--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,38 +1,20 @@
-name: Run Unit Tests
-
+name: 'Test Report'
 on:
-  push:
-    branches:
-      - main
-      - dev
-  pull_request:
-
+  workflow_run:
+    workflows: ['Build App']                     # runs after CI workflow
+    types:
+      - completed
 permissions:
   contents: read
   actions: read
   checks: write
-
 jobs:
-  build:
-    name: Run Jest Unit Tests
+  report:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
-
-      - name: Set up Node.js
-        uses: actions/setup-node@cdca7365b2dadb8aad0a33bc7601856ffabcc48e # v4
-        with:
-          node-version: 'lts/*'  # Use latest LTS version
-
-      - run: npm ci  # Uses package-lock.json for reproducible installs
-      - run: npm run test:unit:ci
-
-      - name: Test Report
-        uses: dorny/test-reporter@v2
-        if: always()
-        with:
-          name: JEST Tests            # Name of the check run which will be created
-          path: "reports/report.xml"
-          reporter: jest-junit        # Format of test results
+    - uses: dorny/test-reporter@v2
+      with:
+        artifact: test-results            # artifact name
+        name: JEST Tests                  # Name of the check run which will be created
+        path: '*.xml'                     # Path to test results (inside artifact .zip)
+        reporter: jest-junit              # Format of test results
