--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -58,3 +58,23 @@ jobs:
         with:
           name: test-results
           path: reports/report.xml
+
+      - name: Install playwright browsers
+        run: npx playwright install --with-deps
+
+      - name: Run e2e Tests
+        run: npm run test:e2e
+
+      - name: Upload test result artifacts
+        if: always()  # Ensures it runs even if tests fail
+        uses: actions/upload-artifact@v4
+        with:
+          name: playwright-report-html
+          path: playwright-report/
+
+      - name: Upload test result junit artifacts
+        if: always()  # Ensures it runs even if tests fail
+        uses: actions/upload-artifact@v4
+        with:
+          name: playwright-report
+          path: playwright-report.xml
