--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,8 @@
 # Created by https://www.toptal.com/developers/gitignore/api/Angular,Node
 # Edit at https://www.toptal.com/developers/gitignore?templates=Angular,Node
 
-# Playwright
-test-results/
-playwright-report/
+# Test reports (jest & playwright)
+reports/
 
 ### Angular ###
 ## Angular ##
