--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,6 +8,9 @@ on:
   push:
     tags:
       - 'v[0-9]+.[0-9]+.*'
+  create:
+      tags:
+      - 'v[0-9]+.[0-9]+.*'
 
 permissions:
   contents: write
@@ -34,11 +37,11 @@ jobs:
 
       - name: Get tag name
         id: vars
-        run: echo "tag=${GITHUB_REF#refs/*/}" >> $GITHUB_OUTPUT
+        run: echo "SOURCE_TAG=${GITHUB_REF#refs/tags/}" >> $GITHUB_ENV
 
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@6c2d9db40f9296374acc17b90404b6e8864128c8 # v4
-        if:  ! contains(steps.vars.outputs.tag, 'rc')
+        if:  ! contains(env.SOURCE_TAG, 'rc')
         with:
           branch: gh-pages  # Deploy to `gh-pages` branch
           folder: dist/paste-perfect/browser
@@ -47,7 +50,7 @@ jobs:
 
       - name: Deploy to GitHub Pages (Review Env)
         uses: JamesIves/github-pages-deploy-action@6c2d9db40f9296374acc17b90404b6e8864128c8 # v4
-        if:  contains(steps.vars.outputs.tag, 'rc')
+        if:  contains(env.SOURCE_TAG, 'rc')
         with:
           repository-name: paste-perfect/paste-perfect-test
           branch: main
