--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,6 +1,13 @@
 name: Deploy App
 
 on:
+  release:
+    types:
+      - published
+      - created
+  push:
+    tags:
+      - 'v[0-9]+.[0-9]+.*'
   create:
       tags:
       - 'v[0-9]+.[0-9]+.*'
