fix: try ref_name

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,7 +37,7 @@ jobs:
 
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@6c2d9db40f9296374acc17b90404b6e8864128c8 # v4
-        if:  ! contains(github.event.ref , 'rc')
+        if:  ! contains(github.ref_name , 'rc')
         with:
           branch: gh-pages  # Deploy to `gh-pages` branch
           folder: dist/paste-perfect/browser
@@ -46,7 +46,7 @@ jobs:
 
       - name: Deploy to GitHub Pages (Review Env)
         uses: JamesIves/github-pages-deploy-action@6c2d9db40f9296374acc17b90404b6e8864128c8 # v4
-        if:  contains(github.event.ref , 'rc')
+        if:  contains(github.ref_name , 'rc')
         with:
           repository-name: paste-perfect/paste-perfect-test
           branch: main
