--- a/.github/workflows/report.yml
+++ b/.github/workflows/report.yml
@@ -16,17 +16,17 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Generate JEST test report
+    - name: Generate JEST tet
       uses: dorny/test-reporter@6e6a65b7a0bd2c9197df7d0ae36ac5cee784230c # v2
       with:
         artifact: test-reports
         name: JEST Tests
-        path: 'reports/jest/report.xml'
+        path: 'jest/report.xml'
         reporter: jest-junit
     - name: Generate E2E test report
       uses: dorny/test-reporter@6e6a65b7a0bd2c9197df7d0ae36ac5cee784230c # v2
       with:
         artifact: test-reports
         name: E2E Tests
-        path: 'reports/playwright/report.xml'
+        path: 'playwright/report.xml'
         reporter: jest-junit
