--- a/.github/workflows/test-and-build.yml
+++ b/.github/workflows/test-and-build.yml
@@ -51,3 +51,24 @@ jobs:
         with:
           name: test-reports
           path: reports/
+
+  report:
+    name: Generate Test Reports
+    runs-on: ubuntu-latest
+    needs: test-and-build
+
+    steps:
+    - name: Generate JEST tet
+      uses: dorny/test-reporter@6e6a65b7a0bd2c9197df7d0ae36ac5cee784230c # v2
+      with:
+        artifact: test-reports
+        name: JEST Tests
+        path: 'jest/report.xml'
+        reporter: jest-junit
+    - name: Generate E2E test report
+      uses: dorny/test-reporter@6e6a65b7a0bd2c9197df7d0ae36ac5cee784230c # v2
+      with:
+        artifact: test-reports
+        name: E2E Tests
+        path: 'playwright/report.xml'
+        reporter: jest-junit
