--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "ng serve",
     "serve": "npm run start",
     "build": "ng build",
-    "build-preview": "ng build --base-href /paste-perfect-test",
+    "build-preview": "ng build --base-href /paste-perfect-test/",
     "build-docker": "ng build --base-href /",
     "test": "npm run test:unit && npm run test:e2e",
     "test:unit:ci": "jest --ci",
