--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "angular-prism": "^0.1.20",
     "jest-junit": "^16.0.0",
     "ngx-clipboard": "^16.0.0",
+    "prettier": "^3.5.3",
+    "prettier-plugin-java": "^2.6.7",
     "primeicons": "^7.0.0",
     "primeng": "^19.0.9",
     "prismjs": "^1.30.0",
@@ -61,7 +63,6 @@
     "jest": "^29.7.0",
     "jest-preset-angular": "^14.5.3",
     "lint-staged": "^15.5.0",
-    "prettier": "^3.5.3",
     "semantic-release": "^24.2.3",
     "ts-jest": "^29.3.0",
     "ts-node": "^10.9.2",
