--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,5 +1,5 @@
 default_stages:
-- commit
+- pre-commit
 repos:
 - repo: https://github.com/pre-commit/pre-commit-hooks
   rev: v5.0.0
@@ -8,7 +8,7 @@ repos:
   - id: end-of-file-fixer
   - id: check-added-large-files
 - repo: https://github.com/commitizen-tools/commitizen
-  rev: v4.4.1
+  rev: v4.8.2
   hooks:
   - id: commitizen
     stages:
@@ -24,7 +24,7 @@ repos:
     - -t
     - warning
 - repo: https://github.com/igorshubovych/markdownlint-cli
-  rev: v0.44.0
+  rev: v0.45.0
   hooks:
   - id: markdownlint-fix
     args:
@@ -36,7 +36,7 @@ repos:
   hooks:
   - id: shellcheck
 - repo: https://github.com/renovatebot/pre-commit-hooks
-  rev: 39.205.1
+  rev: 40.34.4
   hooks:
     - id: renovate-config-validator
 - repo: local
