--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@angular/compiler-cli": "^19.2.2",
     "@playwright/test": "^1.51.1",
     "@semantic-release/commit-analyzer": "^13.0.1",
+    "@semantic-release/git": "^10.0.1",
     "@semantic-release/github": "^11.0.1",
     "@semantic-release/npm": "^12.0.1",
     "@semantic-release/release-notes-generator": "^14.0.3",
