--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,11 @@ name: Deploy App
 
 on:
   release:
-    types: [published,prereleased]
+    types:
+      - published
+      - prereleased
+      - released
+      - created
 
 permissions:
   contents: write
