--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -54,4 +54,4 @@ jobs:
           branch: gh-pages  # Deploy to `gh-pages` branch
           folder: dist/paste-perfect/browser
           clean: true
-          env: gh-pages
+          env: github-pages
