--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,8 @@
     "module": "ES2022",
     "paths": {
       "@components/*": ["./src/app/components/*"],
-      "@const": ["./src/app/const/index"],
+      "@constants": ["./src/app/constants/index"],
+      "@package.json": ["./package.json"],
       "@services/*": ["./src/app/services/*"],
       "@types": ["./src/app/types/index"],
       "@utils/*": ["./src/app/utils/*"]
