--- a/.github/workflows/test-and-build.yml
+++ b/.github/workflows/test-and-build.yml
@@ -38,7 +38,7 @@ jobs:
         run: npm run test:unit:ci
 
       - name: Build application
-        run: npm run build
+        run: npm run build-prod
 
       - name: Install Playwright browsers
         run: npx playwright install --with-deps
