--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,12 +1,12 @@
-name: Deploy App Release
+name: Deploy App
 
 on:
-  push:
-    tags:
-      - 'v[0-9]+.[0-9]+.[0-9]+'
-  create:
-      tags:
-      - ' v[0-9]+.[0-9]+.[0-9]+'
+  release:
+    types:
+      - prereleased
+      - released
+      - published
+      - created
 
 permissions:
   contents: write
@@ -28,13 +28,28 @@ jobs:
       - name: Install dependencies
         run: npm ci  # Ensure dependencies are installed
 
+      - name: Build Angular app (Review Env)
+        if: '!github.event.prerelease'
+        run: npm run build-preview
+
+      - name: Deploy to GitHub Pages (Review Env)
+        uses: JamesIves/github-pages-deploy-action@6c2d9db40f9296374acc17b90404b6e8864128c8 # v4
+        if: '!github.event.prerelease'
+        with:
+          repository-name: paste-perfect/paste-perfect-test
+          branch: gh-pages
+          folder: dist/paste-perfect/browser
+          clean: true
+          ssh-key: ${{ secrets.DEPLOY_KEY }}
+
       - name: Build Angular app
+        if: 'github.event.prerelease'
         run: npm run build
 
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@6c2d9db40f9296374acc17b90404b6e8864128c8 # v4
+        if: 'github.event.prerelease'
         with:
           branch: gh-pages  # Deploy to `gh-pages` branch
           folder: dist/paste-perfect/browser
           clean: true
-          env: gh-pages
