--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,5 +1,5 @@
 default_stages:
-- commit
+- pre-commit
 repos:
 - repo: https://github.com/pre-commit/pre-commit-hooks
   rev: v5.0.0
@@ -36,7 +36,7 @@ repos:
   hooks:
   - id: shellcheck
 - repo: https://github.com/renovatebot/pre-commit-hooks
-  rev: 40.34.4
+  rev: 40.36.8
   hooks:
     - id: renovate-config-validator
 - repo: local
