--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "paste-perfect",
-  "version": "1.0.0-rc.1",
+  "version": "1.11.0-rc.1",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -30,7 +30,7 @@
     "@angular/platform-browser": "^19.2.2",
     "@angular/platform-browser-dynamic": "^19.2.2",
     "@angular/router": "^19.2.2",
-    "@primeng/themes": "^19.0.9",
+    "@primeng/themes": "^19.1.3",
     "@types/prismjs": "^1.26.5",
     "angular-prism": "^0.1.20",
     "jest-junit": "^16.0.0",
@@ -38,7 +38,7 @@
     "prettier": "^3.5.3",
     "prettier-plugin-java": "^2.6.7",
     "primeicons": "^7.0.0",
-    "primeng": "^19.0.9",
+    "primeng": "^19.1.3",
     "prismjs": "^1.30.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -51,6 +51,7 @@
     "@angular/compiler-cli": "^19.2.2",
     "@playwright/test": "^1.51.1",
     "@semantic-release/commit-analyzer": "^13.0.1",
+    "@semantic-release/git": "^10.0.1",
     "@semantic-release/github": "^11.0.1",
     "@semantic-release/npm": "^12.0.1",
     "@semantic-release/release-notes-generator": "^14.0.3",
