--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "paste-perfect",
-  "version": "1.11.0",
+  "version": "1.12.0-rc.1",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "serve": "npm run start",
-    "build-prod": "ng build --base-href /paste-perfect/″",
+    "build-prod": "ng build --base-href /paste-perfect/",
     "build-preview": "ng build --base-href /paste-perfect-test/",
     "build-docker": "ng build --base-href /",
     "test": "npm run test:unit && npm run test:e2e",
