--- a/package.json
+++ b/package.json
@@ -30,13 +30,19 @@
     "@angular/platform-browser": "^19.2.2",
     "@angular/platform-browser-dynamic": "^19.2.2",
     "@angular/router": "^19.2.2",
+    "@prettier/plugin-php": "^0.22.4",
     "@primeng/themes": "^19.1.3",
     "@types/prismjs": "^1.26.5",
     "angular-prism": "^0.1.20",
     "jest-junit": "^16.0.0",
     "ngx-clipboard": "^16.0.0",
     "prettier": "^3.5.3",
+    "prettier-plugin-gherkin": "^3.1.2",
     "prettier-plugin-java": "^2.6.7",
+    "prettier-plugin-kotlin": "^2.1.0",
+    "prettier-plugin-nginx": "^1.0.3",
+    "prettier-plugin-sql": "^0.19.1",
+    "prettier-plugin-toml": "^2.0.5",
     "primeicons": "^7.0.0",
     "primeng": "^19.1.3",
     "prismjs": "^1.30.0",
