fix: added local, test and prod environments for version mocking

--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
     "ng": "ng",
     "start": "ng serve",
     "serve": "npm run start",
-    "build-prod": "ng build --base-href /paste-perfect/",
-    "build-preview": "ng build --base-href /paste-perfect-test/",
-    "build-docker": "ng build --base-href /",
+    "serve:test": "ng serve --configuration=test --no-hmr",
+    "serve:prod": "ng serve --configuration=production --no-hmr",
+    "build-prod": "ng build --base-href /paste-perfect/ --configuration=production",
+    "build-preview": "ng build --base-href /paste-perfect-test/ --configuration=production",
+    "build-docker": "ng build --base-href / --configuration=production",
     "test": "npm run test:unit && npm run test:e2e",
     "test:unit:ci": "jest --ci",
     "test:unit": "jest --verbose",
