--- a/angular.json
+++ b/angular.json
@@ -41,8 +41,8 @@
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "1MB",
-                  "maximumError": "1.5MB"
+                  "maximumWarning": "1.5MB",
+                  "maximumError": "2MB"
                 },
                 {
                   "type": "anyComponentStyle",
@@ -50,7 +50,25 @@
                   "maximumError": "8kB"
                 }
               ],
-              "outputHashing": "all"
+              "outputHashing": "all",
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.prod.ts"
+                }
+              ]
+            },
+            "test": {
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.test.ts"
+                }
+              ],
+              "optimization": false,
+              "extractLicenses": false,
+              "sourceMap": false,
+              "aot": false
             },
             "development": {
               "optimization": false,
@@ -65,6 +83,9 @@
           "configurations": {
             "production": {
               "buildTarget": "paste-perfect:build:production"
+            },
+            "test": {
+              "buildTarget": "paste-perfect:build:test"
             },
             "development": {
               "buildTarget": "paste-perfect:build:development"
