fix: re-named e2e-test to snapshot-test and re-generated screenshots

--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
     "build-prod": "ng build --base-href /paste-perfect/ --configuration=production",
     "build-preview": "ng build --base-href /paste-perfect-test/ --configuration=production",
     "build-docker": "ng build --base-href / --configuration=production",
-    "test": "npm run test:unit && npm run test:e2e",
+    "test": "npm run test:unit && npm run test:snapshots",
     "test:unit:ci": "jest --ci",
     "test:unit": "jest --verbose",
     "test:unit:watch": "jest --verbose --watch",
     "test:coverage": "jest --coverage",
-    "test:e2e": "npx playwright test",
-    "test:e2e:update-snapshots": "npx playwright test --update-snapshots",
+    "test:snapshots": "npx playwright test",
+    "test:snapshots:update-snapshots": "npx playwright test --update-snapshots",
     "lint:check": "ng lint",
     "lint:fix": "ng lint --fix",
     "format:check": "prettier --check 'src/**/*.{ts,js,json,html,scss}'",
