--- a/.gitignore
+++ b/.gitignore
@@ -30,9 +30,9 @@ testem.log
 typings/
 .angular/
 
-# e2e
-e2e/*.js
-e2e/*.map
+# Snapshots
+snapshots/*.js
+snapshots/*.map
 
 # System Files
 .DS_Store
