feat: generate playwright snapshots using docker instead of locally for consistency

--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "test:unit": "jest --verbose",
     "test:unit:watch": "jest --verbose --watch",
     "test:coverage": "jest --coverage",
-    "test:snapshots": "npx playwright test",
-    "test:snapshots:update-snapshots": "npx playwright test --update-snapshots",
+    "test:snapshots": "./playwright-screenshot.sh test",
+    "test:snapshots:watch": "./playwright-screenshot.sh test --ui",
+    "test:snapshots:update-snapshots": "./playwright-screenshot.sh test --update-snapshots",
     "lint:check": "ng lint",
     "lint:fix": "ng lint --fix",
     "format:check": "prettier --check 'src/**/*.{ts,js,json,html,scss}'",
