fix: repaired failing unit tests

--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
     "build-prod": "ng build --base-href /paste-perfect/ --configuration=production",
     "build-preview": "ng build --base-href /paste-perfect-test/ --configuration=production",
     "build-docker": "ng build --base-href / --configuration=production",
-    "test": "npm run test:unit && npm run test:snapshots",
+    "test": "npm run test:unit:coverage && npm run test:snapshots",
     "test:unit:ci": "jest --ci",
     "test:unit": "jest --verbose",
     "test:unit:watch": "jest --verbose --watch",
-    "test:coverage": "jest --coverage",
+    "test:unit:coverage": "jest --coverage",
     "test:snapshots": "npx playwright test",
     "test:snapshots:update-snapshots": "npx playwright test --update-snapshots",
     "lint:check": "ng lint",
