fix: updated report paths

--- a/.github/workflows/test-and-build.yml
+++ b/.github/workflows/test-and-build.yml
@@ -75,12 +75,12 @@ jobs:
       with:
         artifact: test-reports
         name: JEST Tests
-        path: 'reporters/jest/report.xml'
+        path: 'reports/jest/report.xml'
         reporter: jest-junit
     - name: Generate Snapshot test report
       uses: dorny/test-reporter@dc3a92680fcc15842eef52e8c4606ea7ce6bd3f3 # v2
       with:
         artifact: test-reports
         name: Snapshot Tests
-        path: 'reporters/playwright/report.xml'
+        path: 'reports/playwright/report.xml'
         reporter: jest-junit
